<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:background="@color/bg_trans_white">

    <View
        android:id="@+id/menu_bottom_bar_divider"
        android:layout_width="0dp"
        android:layout_height="@dimen/divider_height"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/divider_bg"/>

    <TextView
        android:id="@+id/table_of_contents_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_default"
        android:paddingBottom="@dimen/padding_default"
        app:layout_constraintTop_toBottomOf="@+id/menu_bottom_bar_divider"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/progress_check_box"
        app:layout_constraintHorizontal_weight="1.0"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        android:drawableTop="@drawable/list_bulleted"
        android:background="@drawable/trans_btn_bg"
        android:textSize="@dimen/text_size_default"
        android:textColor="@color/trans_btn_fg"
        android:text="@string/table_of_contents_short"/>

    <CheckBox
        android:id="@+id/progress_check_box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_default"
        android:paddingBottom="@dimen/padding_default"
        app:layout_constraintTop_toBottomOf="@+id/menu_bottom_bar_divider"
        app:layout_constraintLeft_toRightOf="@+id/table_of_contents_button"
        app:layout_constraintRight_toLeftOf="@+id/settings_check_box"
        app:layout_constraintHorizontal_weight="1.0"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        android:button="@null"
        android:drawableTop="@drawable/progress"
        android:background="@drawable/trans_btn_bg"
        android:textSize="@dimen/text_size_default"
        android:textColor="@color/trans_btn_fg"
        android:text="@string/progress"/>

    <CheckBox
        android:id="@+id/settings_check_box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_default"
        android:paddingBottom="@dimen/padding_default"
        app:layout_constraintTop_toBottomOf="@+id/menu_bottom_bar_divider"
        app:layout_constraintLeft_toRightOf="@+id/progress_check_box"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_weight="1.0"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        android:button="@null"
        android:drawableTop="@drawable/settings"
        android:background="@drawable/trans_btn_bg"
        android:textSize="@dimen/text_size_default"
        android:textColor="@color/trans_btn_fg"
        android:text="@string/settings"/>

</android.support.constraint.ConstraintLayout>