<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:clickable="true"
    android:background="@color/bg_trans_white">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:background="@color/divider_bg"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:layout_marginLeft="@dimen/margin_default"
            android:gravity="left"
            android:textSize="@dimen/text_size_default"
            android:textColor="@color/fg_primary"
            android:text="@string/page_turning"/>

        <RadioButton
            android:id="@+id/page_turning_setting_radio_button_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_wide"
            android:paddingRight="@dimen/padding_wide"
            android:paddingTop="@dimen/padding_narrow"
            android:paddingBottom="@dimen/padding_narrow"
            android:layout_marginRight="@dimen/margin_default"
            android:button="@null"
            android:textSize="@dimen/text_size_default"
            android:textColor="@color/check_box_fg"
            android:text="@string/page_turning_curl"
            android:gravity="center"
            android:background="@drawable/line_border_check_box_bg"/>

        <RadioButton
            android:id="@+id/page_turning_setting_radio_button_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_wide"
            android:paddingRight="@dimen/padding_wide"
            android:paddingTop="@dimen/padding_narrow"
            android:paddingBottom="@dimen/padding_narrow"
            android:layout_marginRight="@dimen/margin_default"
            android:button="@null"
            android:textSize="@dimen/text_size_default"
            android:textColor="@color/check_box_fg"
            android:text="@string/page_turning_cover"
            android:gravity="center"
            android:background="@drawable/line_border_check_box_bg"/>

    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:background="@color/divider_bg"/>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageButton
            android:id="@+id/text_size_smaller_button"
            android:layout_width="70dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/number_minus"
            android:background="@drawable/trans_btn_bg"/>

        <TextView
            android:id="@+id/text_size_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/text_size_smaller_button"
            app:layout_constraintRight_toLeftOf="@+id/text_size_larger_button"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="@dimen/text_size_large"
            android:textColor="@color/fg_primary"
            tools:text="5"/>

        <ImageButton
            android:id="@+id/text_size_larger_button"
            android:layout_width="70dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/number_add"
            android:background="@drawable/trans_btn_bg"/>

    </android.support.constraint.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/divider_bg"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"/>

        <RadioButton
            android:id="@+id/color_setting_radio_button_0"
            android:layout_width="@dimen/navigation_bar_height"
            android:layout_height="@dimen/navigation_bar_height"
            android:button="@null"
            android:background="@drawable/color_setting_radio_yellow_bg"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"/>

        <RadioButton
            android:id="@+id/color_setting_radio_button_1"
            android:layout_width="@dimen/navigation_bar_height"
            android:layout_height="@dimen/navigation_bar_height"
            android:button="@null"
            android:background="@drawable/color_setting_radio_white_bg"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"/>

        <RadioButton
            android:id="@+id/color_setting_radio_button_2"
            android:layout_width="@dimen/navigation_bar_height"
            android:layout_height="@dimen/navigation_bar_height"
            android:button="@null"
            android:background="@drawable/color_setting_radio_gray_bg"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"/>

        <RadioButton
            android:id="@+id/color_setting_radio_button_3"
            android:layout_width="@dimen/navigation_bar_height"
            android:layout_height="@dimen/navigation_bar_height"
            android:button="@null"
            android:background="@drawable/color_setting_radio_black_bg"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"/>

        <RadioButton
            android:id="@+id/color_setting_radio_button_4"
            android:layout_width="@dimen/navigation_bar_height"
            android:layout_height="@dimen/navigation_bar_height"
            android:button="@null"
            android:background="@drawable/color_setting_radio_green_bg"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"/>

    </RadioGroup>

</LinearLayout>